--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
+    "autoprefixer": "^10.4.7",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^4.0.0",
+    "postcss": "^8.4.14",
+    "postcss-load-config": "^4.0.1",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
     "svelte": "^3.44.0",
-    "vite": "^3.1.0",
-    "postcss": "^8.4.14",
-    "postcss-load-config": "^4.0.1",
     "svelte-preprocess": "^4.10.7",
-    "autoprefixer": "^10.4.7",
-    "tailwindcss": "^3.1.5"
+    "tailwind-merge": "^1.8.0",
+    "tailwindcss": "^3.1.5",
+    "vite": "^3.1.0"
   },
   "type": "module"
 }
